--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
